--- a/KinectSensorStreams/KinectSensorStreams.csproj
+++ b/KinectSensorStreams/KinectSensorStreams.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Kinect" Version="2.0.1410.19000" />
 	</ItemGroup>
 
@@ -20,4 +21,8 @@
 		<Reference Include="WindowsBase" />
 	</ItemGroup>
 
-</Project>
+	<ItemGroup>
+		<ProjectReference Include="..\KinectConnection\KinectConnection.csproj" />
+	</ItemGroup>
+
+	</Project>
