--- a/KinectConnection/KinectConnection.csproj
+++ b/KinectConnection/KinectConnection.csproj
@@ -80,11 +80,16 @@
     <Compile Include="InfraredImgaeStream.cs" />
     <Compile Include="KinectManager.cs" />
     <Compile Include="KinectStream.cs" />
+    <Compile Include="KinectStreams.cs" />
+    <Compile Include="KinectStreamsFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\CommunityToolkit.Mvvm.8.2.2\build\netstandard2.0\CommunityToolkit.Mvvm.targets" Condition="Exists('..\packages\CommunityToolkit.Mvvm.8.2.2\build\netstandard2.0\CommunityToolkit.Mvvm.targets')" />
