--- a/MyGestureBank/MyGestureBank.csproj
+++ b/MyGestureBank/MyGestureBank.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PostureHandUpLeft.cs" />
     <Compile Include="PostureHandUpRight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
