--- a/GestureTestApp/GestureTestApp.csproj
+++ b/GestureTestApp/GestureTestApp.csproj
@@ -132,6 +132,10 @@
       <Project>{e527438a-dfa2-4ec6-9891-d4956152b093}</Project>
       <Name>KinectConnection</Name>
     </ProjectReference>
+    <ProjectReference Include="..\KinectUtils\KinectUtils.csproj">
+      <Project>{2bc300e4-d3c1-4e17-a011-380edb793182}</Project>
+      <Name>KinectUtils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\CommunityToolkit.Mvvm.8.2.2\build\netstandard2.0\CommunityToolkit.Mvvm.targets" Condition="Exists('..\packages\CommunityToolkit.Mvvm.8.2.2\build\netstandard2.0\CommunityToolkit.Mvvm.targets')" />
