--- a/MyGestureBank/MyGestureBank.csproj
+++ b/MyGestureBank/MyGestureBank.csproj
@@ -44,9 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PostureHandDownLeft.cs" />
+    <Compile Include="PostureHandDownRight.cs" />
     <Compile Include="PostureHandUpLeft.cs" />
     <Compile Include="PostureHandUpRight.cs" />
+    <Compile Include="PostureTwoHandsUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PostureTwoHandsDown.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
