--- a/MyGestureBank/MyGestureBank.csproj
+++ b/MyGestureBank/MyGestureBank.csproj
@@ -51,6 +51,7 @@
     <Compile Include="PostureTwoHandsUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PostureTwoHandsDown.cs" />
+    <Compile Include="SoccerShootGesture .cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
