:wrench: GestureFactory +  improving penaltyMaster's game algorithm

--- a/MyGestureBank/MyGestureBank.csproj
+++ b/MyGestureBank/MyGestureBank.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PenaltyMasterGestureFactory.cs" />
     <Compile Include="PostureHandDownLeft.cs" />
     <Compile Include="PostureHandDownRight.cs" />
     <Compile Include="PostureHandUpLeft.cs" />
