:sparkles: added visibility manager

--- a/PenaltyMaster3000/PenaltyMaster3000.csproj
+++ b/PenaltyMaster3000/PenaltyMaster3000.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\VisibilityManager.cs" />
     <Compile Include="Navigation\INavigationService.cs" />
     <Compile Include="Navigation\NavigationService.cs" />
     <Compile Include="ViewModel\MainVM.cs" />
